--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="PhoneNumber">" Phone Number"</string>
     <string name="address">Address</string>
     <string name="save">SAVE</string>
+    <string name="action_sort">Sort</string>
 </resources>
